--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,7 @@
+@import url('https://fonts.cdnfonts.com/css/amaz-stalker?styles=2837');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@font-face {
-  font-family: 'AmazStalker';
-  src: url('/fonts/AmazStalker.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
 
 
